tests/neg/i7359.scala
trait SAMTrait with
  def first(): String
  def notify(): Unit // error
